scripts/nullaway/original/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8.txt
../original/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_Catalog.java:19: error: [NullAway] initializer method does not guarantee @NonNull field headBlock (line 15) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  private MiniDB_Catalog(MiniDB miniDB){
          ^
    (see http://t.uber.com/nullaway )
../original/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_Block.java:275: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    MiniDB_Block blk = new MiniDB_Block(buf, blockID, null);
                                                      ^
    (see http://t.uber.com/nullaway )
../original/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB.java:27: error: [NullAway] initializer method does not guarantee @NonNull fields dbBlocks (line 10), dbBlockUsed (line 11), catalog (line 21) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  public MiniDB(String dbName){
         ^
    (see http://t.uber.com/nullaway )
../original/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB.java:18: error: [NullAway] @NonNull static field bufMgr not initialized
  public static BufMgr bufMgr;
                       ^
    (see http://t.uber.com/nullaway )
../original/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB.java:132: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return bpt;
    ^
    (see http://t.uber.com/nullaway )
../original/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB.java:174: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return bpt;
    ^
    (see http://t.uber.com/nullaway )
../original/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/BPlusTree.java:23: error: [NullAway] initializer method does not guarantee @NonNull fields indexedFileName (line 9), indexedFieldName (line 9), headBlock (line 14), rootNode (line 17) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  public BPlusTree(MiniDB db){this.miniDB = db;};
         ^
    (see http://t.uber.com/nullaway )
../original/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/BPlusTreeHeadBlock.java:14: error: [NullAway] initializer method does not guarantee @NonNull field bpt (line 5) is initialized along all control-flow paths (remember to check for exceptions or early returns).
  public BPlusTreeHeadBlock(MiniDB_Block blk){
         ^
    (see http://t.uber.com/nullaway )
../original/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/BPlusTreeHeadBlock.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
    this.bpt = null;
             ^
    (see http://t.uber.com/nullaway )
../original/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/BPlusTreeLeafNode.java:105: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return newNode;
    ^
    (see http://t.uber.com/nullaway )
../original/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/Sample4.java:104: error: [NullAway] dereferenced expression bpt is @Nullable
	bpt.printAllRecords();
	   ^
    (see http://t.uber.com/nullaway )
../original/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/BPlusTreeInternalNode.java:118: error: [NullAway] returning @Nullable expression from method with @NonNull return type
      return newNode;
      ^
    (see http://t.uber.com/nullaway )
Note: ../original/url86e9087e81_JohnPease_557_HW3_tgz-pJ8-uwm_cs557_Sample4J8/src/uwm_cs557/MiniDB_Record.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
12 errors
